tests/programs/errors/undefined_name.reflow
module tests.errors.undefined_name

fn main() {
    let x = unknown_function(42)
}
